added content: all subtopics under europe with contents

--- a/continents/europe/vodafone.html
+++ b/continents/europe/vodafone.html
@@ -329,16 +329,33 @@
             <div class="space-y-4" id="data-compromised">
                 <h4 class="text-3xl font-medium text-purple-300">Data Compromised</h4>
                 <h5 class="text-xl font-medium">Exposure of Personal Identifiable Information (PII)</h5>
-                <p>The breach exposed a range of personal information, including names, social security numbers, and contact details. This type of data is highly valuable for identity theft and other malicious activities. As a result, Vodafone faced pressure to support and protect impacted customers, given the serious risks associated with the exposure of such sensitive data.
-
-</p>
+                <p>The breach exposed a range of personal information, including names, social security numbers, and contact details. This type of data is highly valuable for identity theft and other malicious activities. As a result, Vodafone faced pressure to support and protect impacted customers, given the serious risks associated with the exposure of such sensitive data.</p>
 
                 <h5 class="text-xl font-medium">Risk of Account Access Through Encrypted Credential</h5>
                 <p>In addition to PII, the attackers accessed encrypted passwords and other account-related information. While the passwords were encrypted, concerns remained about the potential for them to be cracked and used to access client accounts. The breach underscored the need for multi-factor authentication (MFA) and strong password policies. Customers were advised to change their passwords immediately and to monitor their accounts for suspicious activity.</p>
 
+                <h5 class="text-3xl font-medium text-purple-300">Impact on the Company and Customers</h5>
+                <p class="">The Vodafone Iceland data breach had significant repercussions for both the company and its customers. Customers faced increased risks of identity theft and fraud due to the exposure of their personal information. Vodafone's reputation suffered as a result of the breach and its handling of the incident. Regulatory bodies scrutinized the company's data protection practices, leading to potential legal and financial consequences. Vodafone undertook measures to enhance its cybersecurity infrastructure and prevent future breaches. The incident served as a reminder of the critical importance of robust data security measures and prompt incident response. It also highlighted the need for companies to maintain transparency and communicate effectively with stakeholders during a crisis.
+                </p>
+            </div>
+
+            <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
+                <div id="accordion-header" class="p-4 border-b border-indigo-900">
+                    <h5 class="text-purple-300 font-medium text-lg">Reference</h5>
+                </div>
+                <div class="p-4">
+                    <ul class="space-y-2">
+                        <li>
+                            <a class="text-blue-300 underline" href="https://www.bankinfosecurity.com/vodafone-victim-insider-breach-a-6067">BankInfoSecurity. (2013). Vodafone Victim of Insider Breach</a>
+                        </li>
+                         <li>
+                            <a class="text-blue-300 underline" href="https://www.cyberdefensemagazine.com/vodafone-australia-has-hacked-a-fairfax-journalists-phone/">Cyber Defense Magazine. (2013). Vodafone Australia has hacked a Fairfax journalist's phone. </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
-		
+
 		
 
 		<footer class="text-white w-full p-4 md:mt-24 mt-10">
