--- a/continents/europe/british-airway.html
+++ b/continents/europe/british-airway.html
@@ -334,6 +334,27 @@
                 <h5 class="text-xl font-medium">Financial and Account Credentials Stolen</h5>
                 <p>During purchases, complete credit card information, including CVV numbers, was stolen in real time. Additionally, attackers gained access to login information, including passwords and usernames. This made it possible for customers other than British Airways to have their accounts accessed without authorization. Users who were impacted were required to update their passwords for several services and replace their cards.</p>
 
+                <h5 class="text-3xl font-medium text-purple-300">Impact on the Company and Customers</h5>
+                <p class="">British Airways suffered severe financial and reputational damages as a result of the breach. Due to the COVID-19 epidemic, the ICO's original £183 million fine was subsequently lowered to £20 million. Widespread consumer mistrust and unfavorable press coverage resulted from the occurrence. Affected individuals filed class-action lawsuits against British Airways. The business had to spend a lot of money updating its cybersecurity systems. To better monitor third-party code, new protocols and collaborations were put in place. The hack changed BA's strategy for internet security and brought attention to how crucial proactive data protection is under GDPR.
+                </p>
+            </div>
+
+    
+
+             <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
+                <div id="accordion-header" class="p-4 border-b border-indigo-900">
+                    <h5 class="text-purple-300 font-medium text-lg">Reference</h5>
+                </div>
+                <div class="p-4">
+                    <ul class="space-y-2">
+                        <li>
+                            <a class="text-blue-300 underline" href="https://www.bbc.co.uk/news/technology-54568784The Guardian+2BBC+2Telegraph+2">BBC News. (2020, October 16). British Airways fined £20m over data breach.</a>
+                        </li>
+                         <li>
+                            <a class="text-blue-300 underline" href="https://www.theguardian.com/business/2020/oct/16/ba-fined-record-20m-for-customer-data-breachThe Guardian+4The Guardian+4The Guardian+4">The Guardian. (2020, October 16). BA fined record £20m for customer data breach. </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
 		
