--- a/continents/europe/merck.html
+++ b/continents/europe/merck.html
@@ -333,6 +333,25 @@
                 <h5 class="text-xl font-medium"> Communication Breakdowns and Supply Chain Issues</h5>
                 <p>Email, scheduling, and documentation tools were among the communication platforms that experienced disruptions. In the immediate aftermath, this led to lost production and internal disarray. Delays and difficulties with fulfillment resulted from the impact on supply chain systems as well. For a while, Merck was unable to provide important drugs like Gardasil and other vaccines.</p>
 
+                <h5 class="text-3xl font-medium text-purple-300">Impact on the Company and Customers</h5>
+                <p class="">Merck's losses from the NotPetya assault, including manufacturing delays and recovery costs, were projected to be $870 million. The hack momentarily stopped the production of vaccines and seriously disrupted the company's global supply chain. Legal arguments arose around whether cyberattacks were covered by Merck's property insurance claims. Drug shortages and delays caused the corporation to temporarily lose the trust of the people. Later on, it made significant investments in business continuity planning and cybersecurity infrastructure. The attack made the pharmaceutical business aware of how susceptible it is to international cyberthreats. Merck's experience also helped shape the way that insurance and legal debates over liability and cyberwarfare have developed.
+                </p>
+            </div>
+
+            <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
+                <div id="accordion-header" class="p-4 border-b border-indigo-900">
+                    <h5 class="text-purple-300 font-medium text-lg">Reference</h5>
+                </div>
+                <div class="p-4">
+                    <ul class="space-y-2">
+                        <li>
+                            <a class="text-blue-300 underline" href="https://www.fiercepharma.com/pharma/merck-settles-insurance-companies-over-14b-coverage-2017-cyberattackCybersecurity Dive+4Fierce Pharma+4Insurance Business America+4">Dunleavy, K. (2024, January 5). Merck settles with insurance companies over $1.4B claim tied to 2017 cyberattack: Report. Fierce Pharma. </a>
+                        </li>
+                         <li>
+                            <a class="text-blue-300 underline" href="https://www.insurancebusinessmag.com/us/news/cyber/merck-settles-14-billion-cyberattack-case-against-insurers-471908.aspx">Frost, J. (2024, January 5). Merck settles $1.4 billion cyberattack case against insurers. Insurance Business Magazine. </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
 		
