--- a/continents/europe/travelex.html
+++ b/continents/europe/travelex.html
@@ -334,6 +334,25 @@
                 <h5 class="text-xl font-medium">Exposure of Transactional Data and Reputational Damage</h5>
                 <p>The ransomware attack also resulted in the public exposure of transaction records, including payment histories, transaction IDs, exchange amounts, and processing dates. While the breach was not directly linked to financial losses, the risk of fraudulent activity remained. The incident caused reputational harm to both Travelex and its banking partners, especially in terms of the integrity and confidentiality of customer transaction data.</p>
 
+                <h5 class="text-3xl font-medium text-purple-300">Impact on the Company and Customers</h5>
+                <p class="">Its capacity to offer foreign exchange services was significantly hampered by the Travelex ransomware assault, particularly during the crucial holiday season. The business suffered large financial losses as a result of having to stop operating its internet services for weeks. Consumer confidence was damaged, and many customers experienced prolonged difficulties accessing their money or completing transactions. Additional legal and reputational issues resulted from the occurrence, which resulted in a breach of contract with banking partners and clients. Due to the ransom demand and recovery expenses, the attack's estimated financial cost was in the millions. The attack's financial toll contributed to Travelex's eventual administration (bankruptcy) in 2020. Stronger cybersecurity procedures, with an emphasis on protecting transaction processing systems, were driven by the compromise in the financial services sector.
+                </p>
+            </div>
+            
+            <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
+                <div id="accordion-header" class="p-4 border-b border-indigo-900">
+                    <h5 class="text-purple-300 font-medium text-lg">Reference</h5>
+                </div>
+                <div class="p-4">
+                    <ul class="space-y-2">
+                        <li>
+                            <a class="text-blue-300 underline" href="https://news.sky.com/story/travelex-ransomware-attack-what-we-know-11938524">Sky News. (2020). Travelex ransomware attack: What we know. </a>
+                        </li>
+                         <li>
+                            <a class="text-blue-300 underline" href="https://www.bbc.com/news/business-51005662">BBC News. (2020). Travelex cyber attack: The company at the center of a massive hack.</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
 		
