design: fixed layout,spacing, and typog

--- a/concept-of-cybersecurity/origin-of-hacking-and-cybercrime.html
+++ b/concept-of-cybersecurity/origin-of-hacking-and-cybercrime.html
@@ -5,7 +5,6 @@
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
 		<title>Origin of Hacking and Cybercrime</title>
 		<script src='https://cdn.tailwindcss.com'></script>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 		<link rel="stylesheet" href="../assets/css/fonts.css">
 	</head>
 	<body class="text-white text-roboto">
@@ -35,13 +34,13 @@
 			<div class="relative max-w-4xl mx-auto mt-40">
 				<h4 class="text-6xl font-medium">Origin of Hacking and Cybercrime</h4>
                 <div class="flex items-center space-x-4 mt-4 justify-center">
-                    <a href="#emergence">Hacking as a Concept </a><p> | </p>
-                    <a href="#milestone">Milestone Incidents</a><p> | </p>
+                    <a href="#emergence">Hacking as a Concept </a>
+                    <a href="#milestone">Milestone Incidents</a>
                     <a href="#digital">Cybercrime in Digital Age</a>
                 </div>
 			</div>
 		</div>
-		<div class="bg-gradient-to-b from-black to-[#141528] pt-24 space-y-6 px-2">
+		<div class="bg-gradient-to-b from-black to-[#141528] pt-4 space-y-6 px-2">
             <div class="max-w-6xl mx-auto px-6 py-32 space-y-4">
                 <div class="space-y-4 my-5">
                     <h4 class="font-medium text-2xl text-[#E2C8F1]" id="emergence">The Initial Discovery of Software Vulnerabilities</h4>
@@ -55,33 +54,40 @@
                         Milestone Incidents in Early Hacking History
                     </h4>
 
-                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 items-stretch">
-                        <div class="flex flex-col h-[450px] p-5 bg-[#141528] border border-indigo-900/50 rounded">
-                            <div class="overflow-auto flex-grow space-y-4 pr-2">
+                    <div class="grid grid-cols-1 gap-4">
+                        <div class="border border-indigo-900 bg- p-4 bg-[#141528] rounded space-y-3">
                             <h6 class="text-2xl font-medium text-[#E2C8F1]">The Morris Worm (November, 1988)</h6>
-                            <p class="text-gray-200 text-sm text-justify">
-                                A self-replicating program called the Morris Worm was released from an MIT computer on the evening of November 2, 1988. It quickly spread via the internet, infecting roughly 6,000 of the 60,000 systems that were connected in a 24-hour period. It targeted Unix systems and took advantage of flaws in email protocols and the "finger" service, resulting in massive disruptions and slowdowns at major colleges and organizations like NASA. The worm caused system disruptions and delayed communications, causing damage estimates to range from $100,000 to millions. In order to coordinate responses to such cyber attacks, the first Computer Emergency Response Team (CERT) was established as a result of the incident, which brought to light the weaknesses of networked systems. 
-                            </p>
+                            <p class="text-sm text-gray-300">November, 1988</p>
+                            <div>
+                                <p>The Morris Worm, released on November 2, 1988, was a self-replicating program that infected around 6,000 Unix systems by exploiting flaws in email and network services. It caused widespread slowdowns and communication disruptions, with damages estimated up to millions. This incident led to the creation of the first Computer Emergency Response Team (CERT) to address future cyber threats.</p>
+                                <div class="mt-2">
+                                    <a class="text-white bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Learn More</a>
+                                </div>
                             </div>
                         </div>
 
-                        <div class="flex flex-col h-[450px] p-5 bg-[#141528] border border-indigo-900/50 rounded">
-                            <div class="overflow-auto flex-grow space-y-4 pr-2">
+                        <div class="border border-indigo-900 bg- p-4 bg-[#141528] rounded space-y-3">
                             <h6 class="text-2xl font-medium text-[#E2C8F1]">The Melissa Virus (March, 1999)</h6>
-                            <p class="text-gray-200 text-sm text-justify">
-                                One of the first significant email-based cyberattacks, is the Melissa virus that spread rapidly in March 1999 by deceiving users into opening a Word document attachment. It caused extensive disruption by sending itself to the victim's first 50 contacts in their address book using Microsoft Outlook after it was accessed. An estimated $80 million worth of damage was caused, affecting over a million email accounts. In addition to forcing the FBI to bolster its cybersecurity operations and later establish a specialized Cyber Division, this incident resulted in David L. Smith's arrest.
-                            </p>
+                            <p class="text-sm text-gray-300">March, 1999</p>
+                            <div>
+                                <p>The Melissa virus, one of the first major email-based cyberattacks, spread in March 1999 by tricking users into opening a malicious Word document. It infected over a million email accounts and caused around $80 million in damages by automatically emailing itself to the first 50 contacts in Microsoft Outlook. The attack led to the arrest of its creator, David L. Smith, and prompted the FBI to strengthen its cybersecurity efforts.</p>
+                                <div class="mt-2">
+                                    <a href="#" class="text-white bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Learn More</a>
+                                </div>
                             </div>
                         </div>
 
-                        <div class="flex flex-col h-[450px] p-5 bg-[#141528] border border-indigo-900/50 rounded">
-                            <div class="overflow-auto flex-grow space-y-4 pr-2">
+                        <div class="border border-indigo-900 bg- p-4 bg-[#141528] rounded space-y-3">
                             <h6 class="text-2xl font-medium text-[#E2C8F1]">ILOVEYOU virus (May, 2000)</h6>
-                            <p class="text-gray-200 text-sm text-justify">
-                                The ILOVEYOU virus, which was created by two Filipino college students, was released on May 4, 2000, via email with the subject line "ILOVEYOU" and an attachment called "LOVE-LETTER-FOR-YOU.TXT.vbs." The worm took advantage of people's curiosity by sending copies of itself to every contact in the user's address book after they opened the attachment. The virus quickly spread throughout the world by overwriting important system files, causing system crashes and data loss. The ILOVEYOU virus is thought to have cost the world around $15 billion in damages.
-                            </p>
+                            <p class="text-sm text-gray-300">May, 2000</p>
+                            <div>
+                                <p>Released on May 4, 2000, the ILOVEYOU virus was a global email-based attack created by two Filipino college students. Disguised as a love letter, it spread rapidly by sending itself to all contacts in a user’s address book and overwriting critical files, causing data loss and crashes. The attack resulted in an estimated $15 billion in global damages.</p>
+                                <div class="mt-2">
+                                    <a href="#" class="text-white bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Learn More</a>
+                                </div>
                             </div>
                         </div>
+
                     </div>
 
                 </div>
@@ -99,7 +105,7 @@
                 </div>
 
                 <div>
-                    <details class="rounded border shadow" open>
+                    <details class="rounded border border-indigo-900 shadow" open>
                         <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
                         References
                         </summary>
