--- a/concept-of-cybersecurity/prominent-hackers.html
+++ b/concept-of-cybersecurity/prominent-hackers.html
@@ -5,7 +5,6 @@
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
 		<title>Prominent Ethical Hackers / Experts</title>
 		<script src='https://cdn.tailwindcss.com'></script>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 		<link rel="stylesheet" href="../assets/css/fonts.css">
 	</head>
 	<body class="text-white text-roboto">
@@ -33,118 +32,93 @@
 
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent to-black"></div>
 			<div class="relative max-w-4xl mx-auto mt-40">
-				<h4 class="text-6xl font-medium">Prominent Ethical Hackers / Experts</h4>
-                <div class="flex items-center space-x-4 mt-4 justify-center">
-                    <a href="#start">Explore!</a>
-                </div>
+				<h4 class="text-6xl font-medium">Prominent Ethical Hackers</h4>
 			</div>
 		</div>
 		<div class="bg-gradient-to-b from-black to-[#141528] pt-24 space-y-6 px-2">
+            <div class="grid grid-cols-3 gap-4 max-w-4xl mx-auto">
+                    <div class="col-span-3">
+                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4">
+                            <img src="assets/prominent-hacker-kevin-mitnick.png" class="w-64 h-64 ob-ject-cover rounded-s-lg">
+                            <div class="block p-4 space-y-4">
+                                <h5 class="text-xl font-medium">Kevin Mitnick</h5>
+                                <p>Known to the FBI as the "Most Wanted Hacker," Kevin Mitnick transitioned from a notorious cybercriminal to a leading cybersecurity consultant. He now advises over 500 companies and government agencies worldwide. Mitnick is also an accomplished author, with works like The Art of Deception and The Art of Intrusion.</p>
+                                <div>
+                                    <a href="#" class="bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-span-3">
+                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4">
+                            <img src="assets/prominent-hacker-tsutomu-shimomura.png" class="w-64 h-64 ob-ject-cover rounded-s-lg">
+                            <div class="block p-4 space-y-4">
+                                <h5 class="text-xl font-medium">Tsutomu Shimomura</h5>
+                                <p>Tsutomu Shimomura gained fame for assisting the FBI in capturing Kevin Mitnick in 1995. He chronicled this pursuit in his book Takedown. Currently, Shimomura is the CEO and founder of Neofocal, a company specializing in smart LED networks.</p>
+                                <div>
+                                    <a href="#" class="bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-span-3">
+                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4">
+                            <img src="assets/prominent-hacker-charlie-miller.png" class="w-64 h-64 ob-ject-cover rounded-s-lg">
+                            <div class="block p-4 space-y-4">
+                                <h5 class="text-xl font-medium">Charlie Miller</h5>
+                                <p>A former NSA hacker, he is renowned for winning the Pwn2Own contest four times. He was the first to remotely exploit vulnerabilities in iPhones and Android devices. Miller now works at Cruise, focusing on the security of autonomous vehicles</p>
+                                <div>
+                                    <a href="#" class="bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-span-3">
+                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4">
+                            <img src="assets/prominent-hacker-joanna-rutkowska.png" class="w-64 h-64 ob-ject-cover rounded-s-lg">
+                            <div class="block p-4 space-y-4">
+                                <h5 class="text-xl font-medium">Joanna Rutkowska</h5>
+                                <p>Joanna Rutkowska is a cybersecurity expert specializing in rootkit research and development. She founded the Invisible Things Lab, dedicated to enhancing system security. Rutkowska's work has significantly advanced techniques to detect and counter rootkit attacks.</p>
+                                <div>
+                                    <a href="#" class="bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-span-3">
+                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4">
+                            <img src="assets/prominent-hacker-bruce-schneier.png" class="w-64 h-64 ob-ject-cover rounded-s-lg">
+                            <div class="block p-4 space-y-4">
+                                <h5 class="text-xl font-medium">Bruce Schneier</h5>
+                                <p>Bruce Schneier is a highly accomplished figure in cybersecurity, with over 30 years of experience. He has made significant contributions to cryptography, security protocols, risk management, and security policy. Schneier's work has benefited renowned companies like Google.</p>
+                                <div>
+                                    <a href="#" class="bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-span-3">
+                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4">
+                            <img src="assets/prominent-hacker-greg-hoglund.png" class="w-64 h-64 ob-ject-cover rounded-s-lg">
+                            <div class="block p-4 space-y-4">
+                                <h5 class="text-xl font-medium">Greg Hoglund</h5>
+                                <p>Greg Hoglund is a renowned computer forensics expert known for his work in combating cyber threats. He holds patents for fault injection methods used in software testing. Hoglund founded HBGary, a notable technology security firm that joined the McAfee Security Innovation Alliance in 2008.</p>
+                                <div>
+                                    <a href="#" class="bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             <div class="max-w-6xl mx-auto px-6 py-32 space-y-4">
-				
-                <!-- CARD 1 -->
-                <div class="max-w-4xl mx-auto bg-[#141528] text-white rounded-lg p-6 flex flex-col md:flex-row items-center md:items-center space-y-6 md:space-y-0 md:space-x-6 mb-5 border border-indigo-900" id="start">
-                <!-- Profile Image -->
-                <div class="flex-shrink-0 text-center md:text-left">
-                    <div>
-                    <a href="./assets/prominent-hacker-kevin-mitnick.png" target="image-viewer"><img src="./assets/prominent-hacker-kevin-mitnick.png" alt="Profile Picture" class="w-32 h-32 rounded-full object-cover mx-auto md:mx-0" /></a>
-                    </div>
-                    <p class="text-2xl font-semibold mt-2 text-[#E2C8F1]">Kevin Mitnick</p>
-                </div>
-                <!-- Text Content -->
-                <div class="px-2">
-                    <p class="font-medium leading-relaxed">
-                    Known to the FBI as the "Most Wanted Hacker," Kevin Mitnick transitioned from a notorious cybercriminal to a leading cybersecurity consultant. He now advises over 500 companies and government agencies worldwide. Mitnick is also an accomplished author, with works like The Art of Deception and The Art of Intrusion.
-                    </p>
-                </div>
-                </div>
-
-                <!-- CARD 2 -->
-                <div class="max-w-4xl mx-auto bg-[#141528] text-white rounded-lg p-6 flex flex-col md:flex-row items-center md:items-center space-y-6 md:space-y-0 md:space-x-6 mb-5 border border-indigo-900">
-                <!-- Profile Image -->
-                <div class="flex-shrink-0 text-center md:text-left">
-                    <div>
-                    <a href="./assets/prominent-hacker-tsutomu-shimomura.png" target="image-viewer"><img src="./assets/prominent-hacker-tsutomu-shimomura.png" alt="Profile Picture" class="w-32 h-32 rounded-full object-cover mx-auto md:mx-0" /></a>
-                    </div>
-                    <p class="text-2xl font-semibold mt-2 text-[#E2C8F1]">Tsutomu Shimomura</p>
-                </div>
-                <!-- Text Content -->
-                <div class="px-2">
-                    <p class="font-medium leading-relaxed">
-                    Tsutomu Shimomura gained fame for assisting the FBI in capturing Kevin Mitnick in 1995. He chronicled this pursuit in his book Takedown. Currently, Shimomura is the CEO and founder of Neofocal, a company specializing in smart LED networks.
-                    </p>
-                </div>
-                </div>
-
-                <!-- CARD 3 -->
-                <div class="max-w-4xl mx-auto bg-[#141528] text-white rounded-lg p-6 flex flex-col md:flex-row items-center md:items-center space-y-6 md:space-y-0 md:space-x-6 mb-5 border border-indigo-900">
-                <!-- Profile Image -->
-                <div class="flex-shrink-0 text-center md:text-left">
-                    <div>
-                    <a href="./assets/prominent-hacker-charlie-miller.png" target="image-viewer"><img src="./assets/prominent-hacker-charlie-miller.png" alt="Profile Picture" class="w-32 h-32 rounded-full object-cover mx-auto md:mx-0" /></a>
-                    </div>
-                    <p class="text-2xl font-semibold mt-2 text-[#E2C8F1]">Charlie Miller</p>
-                </div>
-                <!-- Text Content -->
-                <div class="px-2">
-                    <p class="font-medium leading-relaxed">
-                    A former NSA hacker, he is renowned for winning the Pwn2Own contest four times. He was the first to remotely exploit vulnerabilities in iPhones and Android devices. Miller now works at Cruise, focusing on the security of autonomous vehicles.
-                    </p>
-                </div>
-                </div>
-
-                <!-- CARD 4 -->
-                <div class="max-w-4xl mx-auto bg-[#141528] text-white rounded-lg p-6 flex flex-col md:flex-row items-center md:items-center space-y-6 md:space-y-0 md:space-x-6 mb-5 border border-indigo-900">
-                <!-- Profile Image -->
-                <div class="flex-shrink-0 text-center md:text-left">
-                    <div><a href="./assets/prominent-hacker-joanna-rutkowska.png" target="image-viewer"><img src="./assets/prominent-hacker-joanna-rutkowska.png" class="w-32 h-32 rounded-full object-cover mx-auto md:mx-0" /></a>
-                    </div>
-                    <p class="text-2xl font-semibold mt-2 text-[#E2C8F1]">Joanna Rutkowska</p>
-                </div>
-                <!-- Text Content -->
-                <div class="px-2">
-                    <p class="font-medium leading-relaxed">
-                    Joanna Rutkowska is a cybersecurity expert specializing in rootkit research and development. She founded the Invisible Things Lab, dedicated to enhancing system security. Rutkowska's work has significantly advanced techniques to detect and counter rootkit attacks.
-                    </p>
-                </div>
-                </div>
-
-                <!-- CARD 5 -->
-                <div class="max-w-4xl mx-auto bg-[#141528] text-white rounded-lg p-6 flex flex-col md:flex-row items-center md:items-center space-y-6 md:space-y-0 md:space-x-6 mb-5 border border-indigo-900">
-                <!-- Profile Image -->
-                <div class="flex-shrink-0 text-center md:text-left">
-                    <div>
-                    <a href="./assets/prominent-hacker-bruce-schneier.png" target="image-viewer"><img src="./assets/prominent-hacker-bruce-schneier.png" alt="Profile Picture" class="w-32 h-32 rounded-full object-cover mx-auto md:mx-0" /></a>
-                    </div>
-                    <p class="text-2xl font-semibold mt-2 text-[#E2C8F1]">Bruce Schneier</p>
-                </div>
-                <!-- Text Content -->
-                <div class="px-2">
-                    <p class="font-medium leading-relaxed">
-                    Bruce Schneier is a highly accomplished figure in cybersecurity, with over 30 years of experience. He has made significant contributions to cryptography, security protocols, risk management, and security policy. Schneier's work has benefited renowned companies like Google.
-                    </p>
-                </div>
-                </div>
-
-                <!-- CARD 6 -->
-                <div class="max-w-4xl mx-auto bg-[#141528] text-white rounded-lg p-6 flex flex-col md:flex-row items-center md:items-center space-y-6 md:space-y-0 md:space-x-6 mb-5 border border-indigo-900">
-                <!-- Profile Image -->
-                <div class="flex-shrink-0 text-center md:text-left">
-                    <div>
-                    <a href="./assets/prominent-hacker-greg-hoglund.png" target="image-viewer"><img src="./assets/prominent-hacker-greg-hoglund.png" alt="Profile Picture" class="w-32 h-32 rounded-full object-cover mx-auto md:mx-0" /></a>
-                    </div>
-                    <p class="text-2xl font-semibold mt-2 text-[#E2C8F1]">Greg Hoglund</p>
-                </div>
-                <!-- Text Content -->
-                <div class="px-2">
-                    <p class="font-medium leading-relaxed">
-                    Greg Hoglund is a renowned computer forensics expert known for his work in combating cyber threats. He holds patents for fault injection methods used in software testing. Hoglund founded HBGary, a notable technology security firm that joined the McAfee Security Innovation Alliance in 2008.​
-                    </p>
-                </div>
-                </div>
 
                 <div>
-                    <details class="rounded border shadow" open>
+                    <details class="rounded border shadow border-indigo-900" open>
                         <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
                         References
                         </summary>
