--- a/concept-of-cybersecurity/evolution-of-cyberthreats.html
+++ b/concept-of-cybersecurity/evolution-of-cyberthreats.html
@@ -5,7 +5,6 @@
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
 		<title>Evolution of Cyberthreats</title>
 		<script src='https://cdn.tailwindcss.com'></script>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 		<link rel="stylesheet" href="../assets/css/fonts.css">
 	</head>
 	<body class="text-white text-roboto">
@@ -35,8 +34,8 @@
 			<div class="relative max-w-4xl mx-auto mt-40">
 				<h4 class="text-6xl font-medium">Evolution of Cybersecurity</h4>
                 <div class="flex items-center space-x-4 mt-4 justify-center">
-                    <a href="#basic">Basic Malware to Complex Threats</a><p> | </p>
-                    <a href="#rise">Rise of Social Engineering</a><p> | </p>
+                    <a href="#basic">Basic Malware to Complex Threats</a>
+                    <a href="#rise">Rise of Social Engineering</a>
                     <a href="#modern">Modern Threats</a>
                 </div>
 			</div>
@@ -84,7 +83,7 @@
                 </div>
 
                 <div class="mt-5">
-                    <details class="rounded border shadow" open>
+                    <details class="rounded border shadow border-indigo-900" open>
                         <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
                         References
                         </summary>
